Add initial player share seeding
